2006-02-27  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/connio.c (Ns_ConnSend):
	* tests/tclresp.test: Fix bug with buffer management triggered by
	data too large to be sent in a single call to the OS. Don't copy
	unsent iovec's around if there are no additional ones to be added
	to the set.

2006-02-25  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/dns.c: Untabify and reformat.

2006-02-25  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/ttrace.tcl: added implicit support for XOTcl 1.3
	and modified [load] tracer to load packages which were
	not traced.

	* nsd/init.tcl: global modules loaded before per-server
	modules.

2006-02-24  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/connio.c: check for buffer size -1 because
	Tcl_UtfToExternal fills the buffer no to the end

2006-02-23  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/init.tcl: Untabify and reindent. Use eq and ne when testing
	string equality. Add some debug logging to the module loading
	process.

	* nsd/tclresp.c:
	* tests/tclresp.test: 
	* tests/http_chunked.test: ns_headers now queues, but does not
	flush, the headers.  Headers are sent when the first data packet.

	ns_write will send multiple args efficiently using
	scatter/gather IO.

	ns_return no longer handles character encoding redundantly. Now
	handled by the underlying Ns_WriteCharConn().

	* nsd/return.c: Let connio.c handle character encoding.

	* nsd/conn.c: Use Tcl boolean objects instead of ints.

	* configure.in:
	* include/ns.h:
	* nsd/connio.c: Make Ns_ConnSend() write all the buffers it is
	given to the connection, writing in batches up to the OS limit for
	max number of iovec buffs. Previous behaviour was to give up
	after buffer 16.

	UIO_MAXIOV is now detected as on some OS' it is significantly
	larger than the old default of 16 (e.g. on Linux it is 1024).

	Increased the IO buffer size used for encoding character data
	before sending and for transfering data from disk to network. Up